# rust-htmx

./: .env  Cargo.toml  Dockerfile  README.md  compose.yaml  init.sql
src/: main.rs
templates/: cases.html  index.html
templates/components/: casetable.html  navbar.html
